--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Sarabun:wght@400;500;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600&family=Sarabun:wght@400;500;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,7 +21,8 @@
 
   <main id="companyList"></main>
 
-  <div id="overlay" style="display: none;">
+  <!-- Overlay -->
+  <div id="overlay">
     <article class="overlay-box">
       <img id="overlayLogo" src="" alt="">
       <h2 id="overlayTitle"></h2>
